--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  * @Author: surui
  * @Date: 2020-12-25 15:21:09
  * @LastEditors: surui
- * @LastEditTime: 2020-12-27 13:38:36
+ * @LastEditTime: 2021-01-29 14:14:45
 -->
 <!DOCTYPE html>
 <html lang="cn">
@@ -28,6 +28,135 @@
 
 <div class="container">
   <div class="row">
+    <!-- 顶部导航栏 -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">阿里百秀</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">生活馆 <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">自然汇</a></li>
+            <li><a href="#">科技湖</a></li>
+            <li><a href="#">奇趣事</a></li>
+            <li><a href="#">美食杰</a></li>
+          </ul>
+          <form class="navbar-form navbar-left">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="搜索">
+            </div>
+            <button type="submit" class="btn btn-default">搜索</button>
+          </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#" data-toggle="modal" data-target=".login">登录</a></li>
+            <li><a href="#" data-toggle="modal" data-target=".reg">注册</a></li>
+          </ul>
+
+          <!-- 模态框 -->
+          <div class="modal fade login" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                      aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title"> 登录</h4>
+                </div>
+                <div class="modal-body">
+                  <form class="form-horizontal">
+                    <div class="form-group">
+                      <label for="inputEmail3" class="col-sm-2 control-label">邮箱</label>
+                      <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="请输入邮箱">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
+                      <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-sm-offset-2 col-sm-10">
+                        <div class="checkbox">
+                          <label>
+                            <input type="checkbox"> 记住密码
+                          </label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-default">登录</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                  <button type="button" class="btn btn-primary">保存</button>
+                </div>
+              </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+          </div><!-- /.modal -->
+          <div class="modal fade reg" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                      aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title">注册</h4>
+                </div>
+                <div class="modal-body">
+                  <form class="form-horizontal">
+                    <div class="form-group">
+                      <label for="inputEmail3" class="col-sm-2 control-label">邮箱</label>
+                      <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="请输入邮箱">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
+                      <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-sm-offset-2 col-sm-10">
+                        <div class="checkbox">
+                          <label>
+                            <input type="checkbox"> 记住密码
+                          </label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-default">注册</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                  <button type="button" class="btn btn-primary">保存</button>
+                </div>
+              </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+          </div><!-- /.modal -->
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="row">
     <!-- header -->
     <header class="col-md-2">
       <div class="logo">
@@ -36,7 +165,7 @@
           <span class="visible-xs">阿里百秀</span>
         </a>
       </div>
-      <nav>
+      <div class="aside">
         <ul class="clearfix">
           <li><a href="#"> <span class="glyphicon glyphicon-camera"></span> 生活馆</a></li>
           <li><a href="#"> <span class="glyphicon glyphicon glyphicon-picture"></span> 自然汇</a></li>
@@ -44,7 +173,7 @@
           <li><a href="#"> <span class="glyphicon glyphicon-gift"></span> 奇趣事</a></li>
           <li><a href="#"> <span class="glyphicon glyphicon-glass"></span> 美食杰</a></li>
         </ul>
-      </nav>
+      </div>
     </header>
 
     <!-- artical -->
@@ -53,7 +182,7 @@
       <div class="news row clearfix">
         <div class="new-b col-sm-6 col-xs-12">
           <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <!-- Wrapper for slides -->
+            <!-- 轮播图 -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
                 <img src="images/lg.png" alt="news">
@@ -75,7 +204,7 @@
               </div>
             </div>
 
-            <!-- Controls -->
+            <!-- 轮播图控件 -->
             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
               <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
@@ -85,7 +214,6 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-
         </div>
         <div class="new-l col-sm-6 col-xs-12">
           <ul class="row">
@@ -142,6 +270,26 @@
           </div>
         </div>
       </div>
+      <!-- 分页 -->
+      <nav aria-label="Page navigation">
+        <ul class="pagination">
+          <li>
+            <a href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>。
+          </li>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li>
+            <a href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </article>
 
     <!-- aside -->
